--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
     <meta property="og:type" content="website">
     <meta property="og:title" content="Alumni Briged | E-Sports">
-    <meta property="og:description" content="Alumni Briged Site | E-Sports">
+    <meta property="og:description" content="Alumni Briged Bestari Site">
     <meta property="og:site_name" content="bit.do/esportsT">
     <meta property="article:publisher" content="Muhammad Aiman Akid Bin Azreshah">
     <meta property="og:image" content="">
