--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Alumni Briged | E-Sports">
+    <meta property="og:title" content="Alumni Briged Bestari Site">
     <meta property="og:description" content="Alumni Briged Bestari Site">
     <meta property="og:site_name" content="bit.do/esportsT">
     <meta property="article:publisher" content="Muhammad Aiman Akid Bin Azreshah">
