--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 	
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Alumni Briged Bestari Site">
-    <meta property="og:description" content="Alumni Briged Bestari Site">
+    <meta property="og:title" content="Alumni Briged">
+    <meta property="og:description" content="Alumni Briged Bestari Site | E-Sports">
     <meta property="og:site_name" content="bit.do/esportsT">
     <meta property="article:publisher" content="Muhammad Aiman Akid Bin Azreshah">
     <meta property="og:image" content="">
