--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h2>Hi There, SMK Tambun Esports will coming !!</h2>
-		<a class="link animated fadeInUp delay-1s servicelink" class="btn btn-primary" href="guest.html" >Guest</a>
-		<button type="button" class="btn btn-primary"><a href="new.html">News Feed</a></button>
+		<button type="button" a href="new.html" class="btn btn-primary" >News Feed</button>
         </div>
 
         <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 09:00:00"></div>
