--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h2>Hi There, SMK Tambun Esports will coming !!</h2>
+		<br>
+		<h4>Please visit news feed for further update</h4>
 		<button type="button" a href="new.html" class="btn btn-primary" >News Feed</button>
         </div>
 
-        <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 09:00:00"></div>
+        <div id="countdown" data-wow-delay=".3s" data-date="March 17, 2019 12:00:00"></div>
 
       </div>
     </div>
