--- a/new.html
+++ b/new.html
@@ -34,13 +34,12 @@
       <div class="row">
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
-          <h2>Hi There, SMK Tambun Esports will coming !!</h2>
+          <h2 style="text-align:right">NEWS FEED</h2>
 		<br>
 		<h4>Please visit news feed for further update</h4>
 		<button type="button" a href="new.html" class="btn btn-primary" >News Feed</button>
         </div>
 
-        <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
 
       </div>
     </div>
@@ -50,10 +49,6 @@
           <div class="col-md-12 col-sm-12 text-center fadeInUp delay-03s">
             <div class="about-title">
               <h2>Link registration will open soon</h2>
-		<div align="center" class="embed-responsive embed-responsive-16by9">
-			<video controls class="embed-responsive-item">
-			<source src="video/teaser.mp4" type="video/mp4">
-		</video>
 		</div>
 			  <br>
 			  <h2>Who are we?</h2>
