--- a/new.html
+++ b/new.html
@@ -73,7 +73,10 @@
       <div class="row bort">
 
         <div class="copyright">
-          © Alumni Briged Bestari. All rights reserved.
+          © Alumni Briged Bestari. All rights reserved. Who are we?
+             <p>Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari
+
+
         </div>
 
       </div>
