--- a/new.html
+++ b/new.html
@@ -35,9 +35,16 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h2 style="text-align:right">NEWS FEED</h2>
+		<button type="button" a href="index.html" class="btn btn-primary">Main Page</button>
 		<br>
-		<h4>Please visit news feed for further update</h4>
-		<button type="button" a href="new.html" class="btn btn-primary" >News Feed</button>
+		<h4>Meeitng Update, 15 Mac 2019</h4>
+		<h5>Hello my fellow people, I have a schedule to go Pejabat Ketua Setiausaha Perak to meet Exco Pembangunan Belia dan Sukan YB Horward Lee to talk and collaborate about this esports soon on 21 Mac 2019.This gonna be awesome meetup!</h5>
+		
+		<br>
+		
+		<h4>Slot Registration Update, 15 Mac 2019</h4>
+		<h5>Hello my fellow people, Proudly to announce that we will expand the number of slot for the tournament. 10 Slot for Squad n 5 Slot for Duo totally is 15 slot thank you.</h5>
+		
         </div>
 
 
@@ -48,12 +55,8 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 text-center fadeInUp delay-03s">
             <div class="about-title">
-              <h2>Link registration will open soon</h2>
+           
 		</div>
-			  <br>
-			  <h2>Who are we?</h2>
-              <p>Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari </p>
-
 			</div>
 			
 			
@@ -73,8 +76,8 @@
       <div class="row bort">
 
         <div class="copyright">
-          © Alumni Briged Bestari. All rights reserved. Who are we?
-             <p>Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari
+          © Alumni Briged Bestari. All rights reserved. <br>Who are we?
+             Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari
 
 
         </div>
