--- a/new.html
+++ b/new.html
@@ -35,14 +35,15 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h2 style="text-align:right">NEWS FEED</h2>
-		<button type="button" a href="index.html" class="btn btn-primary">Main Page</button>
+		<button type="button" class="btn btn-primary" href="index.html" >Main Page</button>
 		<br>
-		<h4>Meeitng Update, 15 Mac 2019</h4>
+		<br>
+		<h4 style="text-align:left">Meeitng Update, 15 Mac 2019</h4>
 		<h5>Hello my fellow people, I have a schedule to go Pejabat Ketua Setiausaha Perak to meet Exco Pembangunan Belia dan Sukan YB Horward Lee to talk and collaborate about this esports soon on 21 Mac 2019.This gonna be awesome meetup!</h5>
 		
 		<br>
 		
-		<h4>Slot Registration Update, 15 Mac 2019</h4>
+		<h4 style="text-align:left">Slot Registration Update, 15 Mac 2019</h4>
 		<h5>Hello my fellow people, Proudly to announce that we will expand the number of slot for the tournament. 10 Slot for Squad n 5 Slot for Duo totally is 15 slot thank you.</h5>
 		
         </div>
