--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h2>Hi There, SMK Tambun Esports will coming !!</h2>
 		<br>
 		<h4>Please visit news feed for further update</h4>
-		<button type="button" a href="new.html" class="btn btn-primary" >News Feed</button>
+		<a href="new.html" class="btn btn-info" role="button">News Feed</a>
         </div>
 
         <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
