--- a/new.html
+++ b/new.html
@@ -35,7 +35,7 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h2 style="text-align:right">NEWS FEED</h2>
-		<button type="button" class="btn btn-primary" href="index.html" >Main Page</button>
+		<a href="index.html" class="btn btn-info" role="button">Main Page</a>
 		<br>
 		<br>
 		<h4 style="text-align:left">Meeitng Update, 15 Mac 2019</h4>
