--- a/new.html
+++ b/new.html
@@ -77,9 +77,7 @@
       <div class="row bort">
 
         <div class="copyright">
-          © Alumni Briged Bestari. All rights reserved. <br>Who are we?
-             Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari
-
+          © Alumni Briged Bestari. All rights reserved.
 
         </div>
 
