--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 		
 		<br>
 		<h2>Link Registration are now open! register now! slot are limited</h2>
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeEFm2U1s9KhFT_s6e0n8a_JcS4FbbP2u66da79zm3QQ2sO-w/viewform?usp=pp_url&entry.2092238618=%E2%98%85%E5%BD%A1%5Bveno%D0%BCo%CF%85%D1%95%5D%E5%BD%A1%E2%98%85&entry.1556369182=Nur+Shafhiqah+Najwa+Bt+Othman&entry.1556483945=Muhammad+Haikal+Bin+Nazri&entry.408527598=051103080999&entry.657734345=Nur+Shafhiqah+Najwa+Bt+Othman&entry.924843389=050430080246&entry.1817510745=Nur+Irdina+bt.+Fhirdaus&entry.111954774=050622080646&entry.407015412=Muhammad+Danish+Iman+Bin+Mohd+Fadhil&entry.435798297=+050826080621" class="btn btn-info" role="button">Squad</a>  </div>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeEFm2U1s9KhFT_s6e0n8a_JcS4FbbP2u66da79zm3QQ2sO-w/viewform?usp=pp_url" class="btn btn-info" role="button">Squad</a>  
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdtYHrSDCH8C8xCmFPuRoMVpARwWD7v0m0zQJgyamX3w-Qylg/viewform?usp=pp_url" class="btn btn-info" role="button">Duo</a>
-        <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
+      
+	      <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
 
       </div>
     </div>
