--- a/new.html
+++ b/new.html
@@ -77,7 +77,7 @@
       <div class="row bort">
 
         <div class="copyright">
-          © Alumni Briged Bestari. All rights reserved.
+          © Alumni Briged Bestari. All rights reserved. Blyat
 
         </div>
 
