--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdtYHrSDCH8C8xCmFPuRoMVpARwWD7v0m0zQJgyamX3w-Qylg/viewform?usp=pp_url" class="btn btn-info" role="button">Duo</a>
       
 	      <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
-
+	      </div>
       </div>
     </div>
     <section id="about" class="section-padding">
