--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		
 		<br>
 		<h2>Link Registration are now open! register now! slot are limited</h2>
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeEFm2U1s9KhFT_s6e0n8a_JcS4FbbP2u66da79zm3QQ2sO-w/viewform?usp=pp_url" class="btn btn-info" role="button">Squad</a>  
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdtYHrSDCH8C8xCmFPuRoMVpARwWD7v0m0zQJgyamX3w-Qylg/viewform?usp=pp_url" class="btn btn-info" role="button">Duo</a>
+		<a href="#" class="btn btn-info" role="button">Squad</a>  
+		<a href="#" class="btn btn-info" role="button">Duo</a>
       
 	      <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
 	      </div>
