--- a/index.html
+++ b/index.html
@@ -56,6 +56,84 @@
 			<source src="video/teaser.mp4" type="video/mp4">
 		</video>
 		</div>
+		    
+		    <br>
+		    <h2>Squad Team Board</h2>
+		    <table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Bil</th>
+      <th scope="col">Nama Squad</th>
+      <th scope="col">Leader</th>
+      <th scope="col">Logo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>★彡[venoмoυѕ]彡★</td>
+      <td>Muhammad Danish Iman Bin Mohd Fadhil</td>
+      <td><img src="img/v.jpg" alt="logo" width="100"></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>BOSSKU</td>
+      <td>Muhammad Iqhmal Shazwan Bin Yusaili Shah</td>
+      <td><img src="img/bossku.jpg" alt="logo" width="100"></td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>HHHS</td>
+      <td>Muhammad NorHaziq Bin Izman</td>
+      <td><img src="#" alt="logo" width="100"></td>
+    </tr>
+	<tr>
+      <th scope="row">3</th>
+      <td>Sinetron Gamers</td>
+      <td>Muhammad Wafiy Bin Nasrul-Isham</td>
+      <td><img src="img/sg.jpg" alt="logo" width="100"></td>
+    </tr>
+	<tr>
+      <th scope="row">4</th>
+      <td>PADDDDYYY Farmers</td>
+      <td>Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
+      <td><img src="img/paddy.png" alt="logo" width="100"></td>
+    </tr>
+  </tbody>
+</table>
+		    
+		    <br>
+		    <h2>Duo Team Board</h2>
+		    <table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Bil</th>
+      <th scope="col">Nama Duo</th>
+      <th scope="col">Leader</th>
+      <th scope="col">Logo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Royal Army Esports</td>
+      <td>Muhammad Azmeer Hafizi B. Mohd Atan</td>
+      <td><img src="img/ra.jpg" alt="logo" width="100"></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>ExtremeCaution</td>
+      <td>Muhammad Harris Bin Azlan</td>
+      <td><img src="img/ec.png" alt="logo" width="100"></td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>Zuhaily</td>
+      <td><img src="#" alt="logo" width="100"></td>
+    </tr>
+  </tbody>
+</table>
 			  <br>
 			  <h2>Who are we?</h2>
               <p>Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari </p>
