--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>Larry</td>
-      <td>Zuhaily</td>
+      <td>Venom Gamings</td>
+      <td>Muhammad Zuhaily Bin Mokhtar</td>
       <td><img src="#" alt="logo" width="100"></td>
     </tr>
   </tbody>
