--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		    		<h2>Link Registration are now open! register now! slot are limited</h2>
 		<a href="#" class="btn btn-info" role="button">Squad</a>  
 		<a href="#" class="btn btn-info" role="button">Duo</a>
+		    <br>
 		<div align="center" class="embed-responsive embed-responsive-16by9">
 			<video controls class="embed-responsive-item">
 			<source src="video/teaser.mp4" type="video/mp4">
@@ -73,31 +74,31 @@
       <th scope="row">1</th>
       <td>★彡[venoмoυѕ]彡★</td>
       <td>Muhammad Danish Iman Bin Mohd Fadhil</td>
-      <td><img src="img/v.jpg" alt="logo" width="100"></td>
+      <td><img src="img/v.jpeg" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>BOSSKU</td>
       <td>Muhammad Iqhmal Shazwan Bin Yusaili Shah</td>
-      <td><img src="img/bossku.jpg" alt="logo" width="100"></td>
+      <td><img src="img/bossku.jpeg" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>HHHS</td>
       <td>Muhammad NorHaziq Bin Izman</td>
-      <td><img src="#" alt="logo" width="100"></td>
+      <td><img src="#" alt="logo" width="50"></td>
     </tr>
 	<tr>
       <th scope="row">3</th>
       <td>Sinetron Gamers</td>
       <td>Muhammad Wafiy Bin Nasrul-Isham</td>
-      <td><img src="img/sg.jpg" alt="logo" width="100"></td>
+      <td><img src="img/sg.jpeg" alt="logo" width="50"></td>
     </tr>
 	<tr>
       <th scope="row">4</th>
       <td>PADDDDYYY Farmers</td>
       <td>Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
-      <td><img src="img/paddy.png" alt="logo" width="100"></td>
+      <td><img src="img/paddy.png" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
@@ -118,19 +119,19 @@
       <th scope="row">1</th>
       <td>Royal Army Esports</td>
       <td>Muhammad Azmeer Hafizi B. Mohd Atan</td>
-      <td><img src="img/ra.jpg" alt="logo" width="100"></td>
+      <td><img src="img/ra.jpeg" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>ExtremeCaution</td>
       <td>Muhammad Harris Bin Azlan</td>
-      <td><img src="img/ec.png" alt="logo" width="100"></td>
+      <td><img src="img/ec.png" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Venom Gamings</td>
       <td>Muhammad Zuhaily Bin Mokhtar</td>
-      <td><img src="#" alt="logo" width="100"></td>
+      <td><img src="#" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
