--- a/index.html
+++ b/index.html
@@ -72,32 +72,32 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>★彡[venoмoυѕ]彡★</td>
-      <td>Muhammad Danish Iman Bin Mohd Fadhil</td>
+      <td style="text-align:left">★彡[venoмoυѕ]彡★</td>
+      <td style="text-align:left">Muhammad Danish Iman Bin Mohd Fadhil</td>
       <td><img src="img/v.jpeg" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>BOSSKU</td>
-      <td>Muhammad Iqhmal Shazwan Bin Yusaili Shah</td>
+      <td style="text-align:left">BOSSKU</td>
+      <td style="text-align:left">Muhammad Iqhmal Shazwan Bin Yusaili Shah</td>
       <td><img src="img/bossku.jpeg" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>HHHS</td>
-      <td>Muhammad NorHaziq Bin Izman</td>
+      <td style="text-align:left">HHHS</td>
+      <td style="text-align:left">Muhammad NorHaziq Bin Izman</td>
       <td><img src="#" alt="logo" width="50"></td>
     </tr>
 	<tr>
-      <th scope="row">3</th>
-      <td>Sinetron Gamers</td>
-      <td>Muhammad Wafiy Bin Nasrul-Isham</td>
+      <th scope="row">4</th>
+      <td style="text-align:left">Sinetron Gamers</td>
+      <td style="text-align:left">Muhammad Wafiy Bin Nasrul-Isham</td>
       <td><img src="img/sg.jpeg" alt="logo" width="50"></td>
     </tr>
 	<tr>
-      <th scope="row">4</th>
-      <td>PADDDDYYY Farmers</td>
-      <td>Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
+      <th scope="row">5</th>
+      <td style="text-align:left">PADDDDYYY Farmers</td>
+      <td style="text-align:left">Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
       <td><img src="img/paddy.png" alt="logo" width="50"></td>
     </tr>
   </tbody>
@@ -117,20 +117,20 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Royal Army Esports</td>
-      <td>Muhammad Azmeer Hafizi B. Mohd Atan</td>
+      <td style="text-align:left">Royal Army Esports</td>
+      <td style="text-align:left">Muhammad Azmeer Hafizi B. Mohd Atan</td>
       <td><img src="img/ra.jpeg" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>ExtremeCaution</td>
-      <td>Muhammad Harris Bin Azlan</td>
+      <td style="text-align:left">ExtremeCaution</td>
+      <td style="text-align:left">Muhammad Harris Bin Azlan</td>
       <td><img src="img/ec.png" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>Venom Gamings</td>
-      <td>Muhammad Zuhaily Bin Mokhtar</td>
+      <td style="text-align:left">Venom Gamings</td>
+      <td style="text-align:left">Muhammad Zuhaily Bin Mokhtar</td>
       <td><img src="#" alt="logo" width="50"></td>
     </tr>
   </tbody>
