--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <th scope="row">2</th>
       <td style="text-align:left">ExtremeCaution</td>
       <td style="text-align:left">Muhammad Harris Bin Azlan</td>
-      <td><img src="img/ec.png" alt="logo" width="50"></td>
+      <td><img src="img/ec.PNG" alt="logo" width="50"></td>
     </tr>
     <tr>
       <th scope="row">3</th>
