--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <tr>
       <th scope="row">3</th>
       <td style="text-align:left">Venom Gamings</td>
-      <td style="text-align:left">Muhammad Zuhaily Bin Mokhtar</td>
-      <td><img src="#" alt="logo" width="50"></td>
+      <td style="text-align:left">Muhammad Zuhaily Bin Mohd Mokhtar</td>
+      <td><img src="img/vg.jpeg" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
