--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <th scope="row">5</th>
       <td style="text-align:left">PADDDDYYY Farmers</td>
       <td style="text-align:left">Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
-      <td><img src="img/paddy.png" alt="logo" width="50"></td>
+      <td><img src="img/paddy.PNG" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
