Update and rename repair.html to index.html

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h1>Ooppsss!</h1>
-          <h2>Website under maintainance, we feel very sorry for that  :(</h2>
-          <h5>Website may be open back on 3.30 P.M..Prior Notice may early or late.</h5>
+          <h2>We close this website till 10.30 A.M which will open back for resgitration</h2>
+          <h5>Goodluck Fellow People ;)</h5>
+		
 		<br>
+		<div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div>
 	      </div>
       </div>
     </div>
