--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h1>Ooppsss!</h1>
-          <h2>We close this website till 10.30 A.M which will open back for resgitration</h2>
+          <h2>We close this website till 10.30 A.M which will open back for registrationn</h2>
           <h5>Goodluck Fellow People ;)</h5>
 		
 		<br>
