--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		    
 		    <br>
-		    <h2>Squad Team Board (5 Slot Remaining)</h2>
+		    <h2>Squad Team Board (4 Slot Remaining)</h2>
 		    <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -100,6 +100,12 @@
       <td style="text-align:left">PADDDDYYY Farmers</td>
       <td style="text-align:left">Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
       <td><img src="img/paddy.PNG" alt="logo" width="50"></td>
+    </tr>
+	<tr>
+      <th scope="row">6</th>
+      <td style="text-align:left">KOCAK NUBI</td>
+      <td style="text-align:left">Nur Syamimi Amani binti Haswandi</td>
+      <td><img src="img/kn.JPG" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
