--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 		    
 		    <br>
-		    <h2>Squad Team Board (4 Slot Remaining)</h2>
+		    <h2>Squad Team Board (3 Slot Remaining)</h2>
 		    <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -106,11 +106,17 @@
       <td style="text-align:left">Nur Syamimi Amani binti Haswandi</td>
       <td><img src="img/kn.JPG" alt="logo" width="50"></td>
     </tr>
+	<tr>
+      <th scope="row">7</th>
+      <td style="text-align:left">Doroyan Taufan</td>
+      <td style="text-align:left">Muhammad Amar Izuan Bin Mohd Akashah</td>
+      <td><img src="img/pl.jpg" alt="logo" width="50"></td>
+    </tr>
   </tbody>
 </table>
 		    
 		    <br>
-		    <h2>Duo Team Board (2 Slot Remainings)</h2>
+		    <h2>Duo Team Board (1 Slot Remaining!)</h2>
 		    <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -138,6 +144,12 @@
       <td style="text-align:left">Venom Gamings</td>
       <td style="text-align:left">Muhammad Zuhaily Bin Mohd Mokhtar</td>
       <td><img src="img/vg.jpeg" alt="logo" width="50"></td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td style="text-align:left">♤ Paskal ♤</td>
+      <td style="text-align:left">Adlan Faris Bin Lukmanal Hakim</td>
+      <td><img src="img/pp.jpg" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
