--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 		    
 		    <br>
-		    <h2>Squad Team Board (3 Slot Remaining)</h2>
+		    <h2>Squad Team Board (2 Slot Remaining only for the girls only)</h2>
 		    <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -90,9 +90,9 @@
     </tr>
 	<tr>
       <th scope="row">4</th>
-      <td style="text-align:left">Sinetron Gamers</td>
+      <td style="text-align:left">hєαdhuntєrѕ</td>
       <td style="text-align:left">Muhammad Wafiy Bin Nasrul-Isham</td>
-      <td><img src="img/sg.jpeg" alt="logo" width="50"></td>
+      <td><img src="img/hh.jpeg" alt="logo" width="50"></td>
     </tr>
 	<tr>
       <th scope="row">5</th>
@@ -111,6 +111,12 @@
       <td style="text-align:left">Doroyan Taufan</td>
       <td style="text-align:left">Muhammad Amar Izuan Bin Mohd Akashah</td>
       <td><img src="img/pl.jpg" alt="logo" width="50"></td>
+    </tr>
+	<tr>
+      <th scope="row">8</th>
+      <td style="text-align:left">Ayam kari</td>
+      <td style="text-align:left">Muhammad Adlin Haikal Bin Muhammad Kashfullah</td>
+      <td><img src="img/ka.jpg" alt="logo" width="50"></td>
     </tr>
   </tbody>
 </table>
