--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	<tr>
       <th scope="row">5</th>
       <td style="text-align:left">PADDDDYYY Farmers</td>
-      <td style="text-align:left">Muhammad Adam Muhaimim Bin Mohd Kamal Ariffin</td>
+      <td style="text-align:left">Nur Adibah Yusra Bt Abdul Ghaffar</td>
       <td><img src="img/paddy.PNG" alt="logo" width="50"></td>
     </tr>
 	<tr>
