--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h4>Please visit news feed for further update</h4>
 		<a href="new.html" class="btn btn-info" role="button">News Feed</a>
 	      <!-- <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div> -->
-			    		<h2>Link Registration are now open! register now! slot are limited</h2>
+			    		<h2>Link Registration are now closed. For further details click the button below</h2>
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeEFm2U1s9KhFT_s6e0n8a_JcS4FbbP2u66da79zm3QQ2sO-w/viewform?usp=pp_url" class="btn btn-info" role="button">Squad</a>  
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdtYHrSDCH8C8xCmFPuRoMVpARwWD7v0m0zQJgyamX3w-Qylg/viewform?usp=pp_url" class="btn btn-info" role="button">Duo</a>
 		   
