--- a/new.html
+++ b/new.html
@@ -37,6 +37,9 @@
           <h2 style="text-align:right">NEWS FEED</h2>
 		<a href="index.html" class="btn btn-info" role="button">Main Page</a>
 		<br>
+				<h4 style="text-align:left">Controversial Registration, 18 Mac 2019</h4>
+		<h5>Hello my fellow people, Most of you are questioning why do Muhammad Zuhaily Bin Mohd Mokhtar ex-smk tambun join this tournament? well we have the answer, He is an athlete and his experience in esports are really handful for us.Before we start this tournament we will have a session tedTalk about Esports</h5>
+	
 		<br>
 		<h4 style="text-align:left">Meeitng Update, 16 Mac 2019</h4>
 		<h5>Hello my fellow people, I have a schedule to go Pejabat Ketua Setiausaha Perak to meet Exco Pembangunan Belia dan Sukan YB Horward Lee to talk and collaborate about this esports soon on 21 Mac 2019.This gonna be awesome meetup!</h5>
