--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
       <td style="text-align:left">Muhammad Adlin Haikal Bin Muhammad Kashfullah</td>
       <td><img src="img/ka.jpg" alt="logo" width="50"></td>
     </tr>
+	<tr>
+      <th scope="row">9</th>
+      <td style="text-align:left">CRAZY GOALS</td>
+      <td style="text-align:left">Khairunn Nisa binti Ahmad Subaki</td>
+      <td><img src="img/cg.jpeg" alt="logo" width="50"></td>
+    </tr>
   </tbody>
 </table>
 		    
