--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 		    
 		    <br>
-		    <h2>Squad Team Board (2 Slot Remaining only for the girls only)</h2>
+		    <h2>Squad Team Board</h2>
 		    <table class="table">
   <thead class="thead-dark">
     <tr>
