--- a/new.html
+++ b/new.html
@@ -36,6 +36,9 @@
           <img src="img/lugu.png" alt="logo" width="150">
           <h2 style="text-align:right">NEWS FEED</h2>
 		<a href="index.html" class="btn btn-info" role="button">Main Page</a>
+						<h4 style="text-align:left">Tournament Issue, 27 Mac 2019</h4>
+		<h5>Hello my fellow people, its ain't really good news, our collaboration contract with Perak State Agency PASAK has been cancelled and abolished which mean we have serious trouble in almost everything setup for the tournament.WHAT'S NEXT? WELL THE ANSWER MAY BE EITHER WE POSTPONE THE TOURNAMENT OR ABORT THE TOURNAMENT. the final answer will known in next week.</h5>
+	
 		<br>
 				<h4 style="text-align:left">Controversial Registration, 18 Mac 2019</h4>
 		<h5>Hello my fellow people, Most of you are questioning why do Muhammad Zuhaily Bin Mohd Mokhtar ex-smk tambun join this tournament? well we have the answer, He is an athlete and his experience in esports are really handful for us.Before we start this tournament we will have a session tedTalk about Esports</h5>
