--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
-          <h2>Hi There, SMK Tambun Esports will coming !!</h2>
+          <h2>Sorry to hear about this news, SMK Tambun Esports are cancelled :(</h2>
 		<br>
 		<h4>Please visit news feed for further update</h4>
 		<a href="new.html" class="btn btn-info" role="button">News Feed</a>
@@ -46,6 +46,7 @@
 	      </div>
       </div>
     </div>
+	  <!--
     <section id="about" class="section-padding">
       <div class="container">
         <div class="row">
@@ -165,6 +166,7 @@
     </tr>
   </tbody>
 </table>
+		    --->
 			  <br>
 			  <h2>Who are we?</h2>
               <p>Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari </p>
