--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
           <h2>Sorry to hear about this news, SMK Tambun Esports are cancelled :(</h2>
-		<br>
+		<br><!--
 		<h4>Please visit news feed for further update</h4>
 		<a href="new.html" class="btn btn-info" role="button">News Feed</a>
 	      <!-- <div id="countdown" data-wow-delay=".3s" data-date="March 18, 2019 10:30:00"></div> -->
-			    		<h2>Link Registration are now closed. For further details click the button below</h2>
+			    		<!-- <h2>Link Registration are now closed. For further details click the button below</h2>
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeEFm2U1s9KhFT_s6e0n8a_JcS4FbbP2u66da79zm3QQ2sO-w/viewform?usp=pp_url" class="btn btn-info" role="button">Squad</a>  
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdtYHrSDCH8C8xCmFPuRoMVpARwWD7v0m0zQJgyamX3w-Qylg/viewform?usp=pp_url" class="btn btn-info" role="button">Duo</a>
-		   
+		   -->
 	      </div>
       </div>
     </div>
