--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
       <div class="row">
         <div class="logo text-center">
           <img src="img/lugu.png" alt="logo" width="150">
-          <h2>Sorry to hear about this news, SMK Tambun Esports are cancelled :(</h2>
+          <h2>Coming soon....The StartUp</h2>
 	      </div>
       </div>
 
 			  <br>
-			  <h2>Who are we?</h2>
-              <p>Alumni Briged is a group of Ex SMK Tambun standing from Senior Briged Bestari,</br>we gather together to rebuild,contribute and advisor for the Briged Bestari </p>
-
+			  <h2>Who?  Just an individual that offering IT service to Public from Technical Design to Development and Maintainance </h2>
+				  <h2>currently I'm developing a Hybrid Software Application for Next-Gen Digital Education..My School is my Site for Testing and Deployment for this project.</h2>
 			</div>
 			
 			
@@ -61,7 +60,7 @@
       <div class="row bort">
 
         <div class="copyright">
-          © Alumni Briged Bestari. All rights reserved.
+          © Untitled. All rights reserved.
         </div>
 
       </div>
